# RayCast

./: CMakeLists.txt  README.md  getPath.h  imageloader.h  main.cpp  map.h  raycaster.h
assets/: map.txt
assets/Map1/: map1.txt
assets/Map2/: map2.txt
